LendersApp/src/objects/UWVerification__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Opportunity__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Action_Link__c</fullName>
        <formula>IF(NOT(ISBLANK(VerificationMaster__r.Action_Link__c)), 

HYPERLINK(&quot;/apex/VerificationActionLink?vid=&quot; &amp; Id , IF(OR(ISNULL(VerificationMaster__r.Action_Link_Label__c), ISBLANK(VerificationMaster__r.Action_Link_Label__c)), &quot;Action&quot;, VerificationMaster__r.Action_Link_Label__c)),
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Action Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Verifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_on_Rent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Current on Rent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Completed__c</fullName>
        <label>Date Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Interview__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Interview</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_WF_Firing_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is WF Firing Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Landlord_Name__c</fullName>
        <label>Landlord Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lease_Expiration_Date__c</fullName>
        <label>Lease Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Verifications</relationshipLabel>
        <relationshipName>Verifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Owner_1_First_Name__c</fullName>
        <formula>Opportunity__r.McaApp__Owner_1__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner 1 First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_1_Last_Name__c</fullName>
        <formula>Opportunity__r.McaApp__Owner_1__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner 1 Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rating_Icon__c</fullName>
        <formula>IF(not(isblank(text(Rating__c))),

&quot;[&quot; &amp; text(Rating__c)&amp; &quot;] &quot;,null) &amp;
IMAGE(  CASE(Rating__c,  &quot;1&quot;, &quot;/img/samples/rating1.gif&quot;, &quot;2&quot;, &quot;/img/samples/rating2.gif&quot;, &quot;3&quot;, &quot;/img/samples/rating3.gif&quot;,  &quot;4&quot;, &quot;/img/samples/rating4.gif&quot;,  &quot;5&quot;, &quot;/img/samples/rating5.gif&quot;,  &quot;/s.gif&quot; ),  &quot;rating&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This formula displays a colored circle to indicate a rating on a scale of one to five, where solid red is one, half red is two, black outline is three, half black is four, and solid black is five.</inlineHelpText>
        <label>Rating</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <label>Rating</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Relationship_length__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Relationship length?</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rent_Amount__c</fullName>
        <label>Rent Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <picklist>
            <picklistValues>
                <fullName>PreQualification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Underwriting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Out</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status_Icon__c</fullName>
        <formula>IF(Completed__c =true,IMAGE(&apos;/img/msg_icons/confirm16.png&apos;, &apos;Completed&apos;),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status Icon</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deferred</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canceled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Trade_Name__c</fullName>
        <label>Trade Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Type__c</fullName>
        <label>Vendor Type</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerificationMaster__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Verification Master</label>
        <referenceTo>VerificationMaster__c</referenceTo>
        <relationshipName>UW_Verifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Web_Name__c</fullName>
        <label>Web Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Would_You_Continue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Would You Continue ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Would_You_Renew__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Would You Renew ?</label>
        <type>Checkbox</type>
    </fields>
    <label>Verification</label>
    <nameField>
        <label>Verification Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Verifications</pluralLabel>
    <recordTypes>
        <fullName>Business_Reports</fullName>
        <active>true</active>
        <label>Business Reports</label>
    </recordTypes>
    <recordTypes>
        <fullName>Landlord</fullName>
        <active>true</active>
        <label>Landlord</label>
    </recordTypes>
    <recordTypes>
        <fullName>Other</fullName>
        <active>true</active>
        <label>Other</label>
    </recordTypes>
    <recordTypes>
        <fullName>Site_Inspetion</fullName>
        <active>true</active>
        <label>Site Inspection</label>
    </recordTypes>
    <recordTypes>
        <fullName>Trade_Reference</fullName>
        <active>true</active>
        <label>Trade Reference</label>
    </recordTypes>
    <recordTypes>
        <fullName>UCC</fullName>
        <active>true</active>
        <label>UCC</label>
    </recordTypes>
    <recordTypes>
        <fullName>Web_Search</fullName>
        <active>true</active>
        <label>Web Search</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>